Document more keyboard shortcuts

--- a/trcview/projects/org.graalvm.vm.trcview/src/org/graalvm/vm/trcview/ui/help/content/dataview.html
+++ b/trcview/projects/org.graalvm.vm.trcview/src/org/graalvm/vm/trcview/ui/help/content/dataview.html
@@ -39,6 +39,9 @@
 			<tr><td style="text-align: center"><code>&lt;C-C&gt;</code></td><td>copy currently selected text</td></tr>
 			<tr><td style="text-align: center"><code>&lt;CR&gt;</code></td><td>follow pointer</td></tr>
 			<tr><td style="text-align: center"><code>&lt;ESC&gt;</code></td><td>return to previous location</td></tr>
+			<tr><td style="text-align: center"><code>&lt;F5&gt;</code></td><td>re-run static type propagation</td></tr>
+			<tr><td style="text-align: center"><code>&lt;F6&gt;</code></td><td>incrementally run static type propagation</td></tr>
+			<tr><td style="text-align: center"><code>&lt;F9&gt;</code></td><td>refresh view</td></tr>
 		</table>
 	</body>
 </html>
