--- a/trcview/projects/org.graalvm.vm.trcview/src/org/graalvm/vm/trcview/ui/help/content/main.html
+++ b/trcview/projects/org.graalvm.vm.trcview/src/org/graalvm/vm/trcview/ui/help/content/main.html
@@ -43,6 +43,9 @@
 			<tr><td style="text-align: center"><code>&lt;C-Q&gt;</code></td><td>exit TRCView</td></tr>
 			<tr><td style="text-align: center"><code>&lt;CR&gt;</code></td><td>step into subroutine</td></tr>
 			<tr><td style="text-align: center"><code>&lt;ESC&gt;</code></td><td>return from subroutine</td></tr>
+			<tr><td style="text-align: center"><code>&lt;S-F2&gt;</code></td><td>open ABI editor</td></tr>
+			<tr><td style="text-align: center"><code>&lt;S-F5&gt;</code></td><td>open data view</td></tr>
+			<tr><td style="text-align: center"><code>&lt;S-F6&gt;</code></td><td>open device view</td></tr>
 		</table>
 	</body>
 </html>
