--- a/trcview/projects/org.graalvm.vm.trcview/src/org/graalvm/vm/trcview/ui/help/content/dataview.html
+++ b/trcview/projects/org.graalvm.vm.trcview/src/org/graalvm/vm/trcview/ui/help/content/dataview.html
@@ -37,6 +37,7 @@
 			<tr><td style="text-align: center"><code>r</code></td><td>change display format to characters</td></tr>
 			<tr><td style="text-align: center"><code>a</code></td><td>define string</td></tr>
 			<tr><td style="text-align: center"><code>w</code></td><td>export currently selected variable as C data definition</td></tr>
+			<tr><td style="text-align: center"><code>x</code></td><td>show memory accesses to the currently selected location</td></tr>
 			<tr><td style="text-align: center"><code>&lt;C-C&gt;</code></td><td>copy currently selected text</td></tr>
 			<tr><td style="text-align: center"><code>&lt;CR&gt;</code></td><td>follow pointer</td></tr>
 			<tr><td style="text-align: center"><code>&lt;ESC&gt;</code></td><td>return to previous location</td></tr>
