Update comment about vmx86 in trcview documentation

--- a/trcview/projects/org.graalvm.vm.trcview/src/org/graalvm/vm/trcview/ui/help/content/trcview.html
+++ b/trcview/projects/org.graalvm.vm.trcview/src/org/graalvm/vm/trcview/ui/help/content/trcview.html
@@ -31,7 +31,7 @@
 		<h2>Supported Interpreters and Emulators</h2>
 		<p>At the moment the following interpreters can record execution traces for TRCView:</p>
 		<ul>
-			<li><a href="https://github.com/pekd/tracer/tree/master/vmx86">vmx86</a>: a fully sandboxed GraalVM based AMD64 interpreter with support for many Linux syscalls; this also includes the necessary x86 architecture module for TRCView</li>
+			<li><a href="https://github.com/pekd/tracer/tree/master/vmx86">vmx86</a>: a fully sandboxed GraalVM based AMD64 interpreter with support for many Linux syscalls</li>
 			<li><a href="https://github.com/hackyourlife/lsi-11">LSI-11</a>: a PDP-11/03 interpreter</li>
 		</ul>
 
