--- a/trcview/projects/org.graalvm.vm.trcview/src/org/graalvm/vm/trcview/ui/help/content/trcview.html
+++ b/trcview/projects/org.graalvm.vm.trcview/src/org/graalvm/vm/trcview/ui/help/content/trcview.html
@@ -13,7 +13,7 @@
 
 		<h2>Features</h2>
 		<ul>
-			<li><strong>Architecture agnostic</strong>: the core analysis algorithms are completely architecture agnostic. Support for different architectures is provided by architecture modules. By default TRCView comes with architecture modules for 64bit AMD64, 32bit RISC-V, 32bit PowerPC, PDP-11/03, and Z80.</li>
+			<li><strong>Architecture agnostic</strong>: the core analysis algorithms are completely architecture agnostic. Support for different architectures is provided by architecture modules. By default TRCView comes with architecture modules for 64bit AMD64, 32bit RISC-V, 32bit PowerPC, PDP-11/03, Z80, and H8S/2350.</li>
 			<li><strong>Execution tree</strong>: in a flat execution trace, you would see all instructions of called subroutines, which can be tens of thousands of instructions. TRCView transforms the execution trace into a tree, so you can "step over" subroutine calls and focus on the code of the current subroutine.</li>
 			<li><strong>Annotations</strong>: you can annotate the program run with comments and add types to make it easier to understand what the program did.</li>
 			<li><strong>Call decoding</strong>: if you provide prototypes for subroutines in C syntax, TRCView can decode the arguments according to the ABI and show them as comment in the execution trace.</li>
